# docs/swagger.json
@@ -1095,12 +1095,6 @@
                 "start_time"
             ],
             "properties": {
-                "allowed_emails": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
                 "duration": {
                     "type": "integer"
                 },
